Changing in font- styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ h1 , h3 {
    color: #8f8e8e;
    margin: 50px 0;
    font-size: 1.5rem;
+   line-height: 2;
  }
 
  .skills{
@@ -109,6 +110,7 @@ h1 , h3 {
  color: #8f8e8e;
  margin: 50px 0;
  font-size: 1.5rem;
+ line-height: 1;
 }
 .skill-row img{
   height: 300px;
@@ -131,6 +133,7 @@ h1 , h3 {
   color: #8f8e8e;
   margin: 50px 0;
   font-size: 1.5rem;
+  line-height: 1;
 }
 .contact-me .btn{
   background-color: #45b29a;
